fixed an issue where the main menu with open submenus would not fit in the device's viewport, without being able to scroll through the menu

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,7 +3,6 @@
         position: relative;
         width: 100%;
         min-width: 320px;
-        overflow: hidden;
     }
 
     #main-header .cont-inf {
@@ -153,18 +152,18 @@
 
     /* mobile menu */
 
-    .menu-opened {
-        left: 0 !important;
-    }
-
     #main-nav {
         width: 100%;
         position: absolute;
         background: #da2c2c;
         top: 56px;
-        left: 100%;
+        transform: scale(0);
         transition: 0.2s;
         z-index: 7;
+    }
+
+    #main-nav.menu-opened {
+        transform: scale(1);
     }
 
     #main-nav ul li {
